Got BlackJack to function properly, with oppponent being more competitive trying to think like real player would, taking a risk or not.